# 2023-Advent-Of-Code-Solutions

./: .gitignore  Dockerfile  README.md  docker-compose.yaml
get_input_v2/: .main.cpp.swp  CMakeLists.txt  debug.bat  main.cpp  release.bat
prot-puzz/part-1/: CMakeLists.txt  debug.sh  main.cpp
prot-puzz/part-2/: main.cpp
puzzle-1/: CMakeLists.txt  Day 1 - Advent of Code 2023.html  main.cpp  puzzle-1.txt
puzzle-10/part-1/: main.cpp  makerun.sh  release.bat
puzzle-10/part-2/: CMakeLists.txt  debug.bat  main.cpp
puzzle-11/part-1/: .data.in.swp  main.cpp  release.sh
puzzle-11/part-2/: CMakeLists.txt  main.cpp  release.sh
puzzle-12/part-1/: main.cpp
puzzle-12/part-2/: debug.sh  main.cpp
puzzle-2/: CMakeLists.txt  Day 2 - Advent of Code 2023.html  main.cpp
puzzle-2/part-1/: CMakeLists.txt  main.cpp
puzzle-2/part-2/: CMakeLists.txt  main.cpp
puzzle-3/: Day 3 - Advent of Code 2023.html
puzzle-3/part-1/: CMakeLists.txt  main.cpp
puzzle-3/part-2/: CMakeLists.txt  main.cpp
puzzle-4/: Day 4 - Advent of Code 2023.html
puzzle-4/Day 4 - Advent of Code 2023_files/: js
puzzle-4/part-1/: CMakeLists.txt  main.cpp
puzzle-4/part-2/: CMakeLists.txt  main.cpp
puzzle-5/: Day 5 - Advent of Code 2023.html
puzzle-5/part-1/: CMakeLists.txt  main.cpp
puzzle-5/part-2/: CMakeLists.txt  main.cpp  p5p2-explanation.drawio
puzzle-6/: Day 6 - Advent of Code 2023.html
puzzle-6/part-1/: CMakeLists.txt  main.cpp
puzzle-6/part-2/: CMakeLists.txt  main.cpp
puzzle-7/: Day 7 - Advent of Code 2023.html
puzzle-7/part-1/: CMakeLists.txt  main.cpp
puzzle-7/part-2/: CMakeLists.txt  main.cpp
puzzle-8/part-1/: CMakeLists.txt  main.cpp
puzzle-8/part-2/: CMakeLists.txt  main.cpp
puzzle-9/part-1/: CMakeLists.txt  main.cpp
puzzle-9/part-2/: CMakeLists.txt  main.cpp
